feat: add products
